<resources>
    <string name="app_name">CookBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="ingredients">Ingredients:</string>
    <string name="cooking_recipe">Сooking recipe:</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="recipes">Recipes</string>
    <string name="title">Title</string>
    <string name="description">Description none</string>
    <string name="registration_form">Registration Form</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="back">Back</string>
    <string name="add_user">Add User</string>
    <string name="user_name">User Name:</string>
    <string name="user_email">User email:</string>
    <string name="logout">Logout</string>
    <string name="user_favorite_recipes">User Favorite Recipes</string>
</resources>